Inspection cleanup